[gd_scene load_steps=3 format=3 uid="uid://ci115hcg3twey"]

[ext_resource type="Theme" uid="uid://ci0oechekfhsk" path="res://ui/player_hud/location_display/location_display.tres" id="1_aywbv"]
[ext_resource type="Script" path="res://ui/player_hud/location_display/location_display.gd" id="1_gt04n"]

[node name="LocationDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_aywbv")
script = ExtResource("1_gt04n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 162.0
offset_bottom = 90.0
grow_vertical = 2
theme_override_constants/separation = 30

[node name="TextContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="LocationText" type="Label" parent="VBoxContainer/TextContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "LOCATION"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15

[node name="StateContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_aywbv")
theme_type_variation = &"Holder"
